# chibimo

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  chibimo.c
app/src/main/java/forty/two/chibimo/: EmoConnection.kt  MainActivity.kt  MediaTree.kt  PlayerService.kt  SettingsActivity.kt  StatefulMediaPlayer.kt  TcpClient.kt  ToastController.kt  Utils.kt
app/src/main/java/forty/two/chibimo/db/: Changes.kt  ChangesDB.kt  Songs.kt
app/src/main/java/forty/two/chibimo/emo/: Emo.kt  EmoConnection.kt
app/src/main/java/forty/two/chibimo/media/: PlayerService.kt  StatefulMediaPlayer.kt
app/src/main/java/forty/two/chibimo/net/: EmoConnection.kt  TcpClient.kt
app/src/main/java/forty/two/chibimo/ui/: HelpActivity.kt  (+4 more)
app/src/main/res/drawable/: ic_baseline_api_24.xml  ic_baseline_keyboard_arrow_down_24.xml  ic_baseline_keyboard_arrow_right_24.xml  ic_baseline_library_music_24.xml  ic_baseline_pause_24.xml  ic_baseline_play_arrow_24.xml  ic_baseline_repeat_one_24.xml  ic_baseline_skip_next_24.xml  ic_baseline_stop_24.xml
app/src/main/res/layout/: activity_help.xml  activity_main.xml  settings_activity.xml  tree_node.xml
app/src/main/res/menu/: toolbar.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
ergonomie/: Prüfungsvorbereitung.md  UML.drawio  User Story Map.ods  Vision_Scope.md
expose/: expose.md  layout.xcf
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
